manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-worker
  namespace: ehb
  labels:
    app: hourly-milb-hats
    platform: mastodon
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: hourly-milb-hats
  template:
    metadata:
      labels:
        app: hourly-milb-hats
    spec:
      containers:
      - name: poster
        image: tupperward/everyhourbot:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 443
        volumeMounts:
        - name:  ehb-media
          mountPath:  /ehb/media
      restartPolicy: Always
      volumes:
      - name: ehb-media
        persistentVolumeClaim:
          claimName: ehb-media-pvc
