manifests/importer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importer
  namespace: ehb
spec:
  selector:
    matchLabels:
      app: importer
  template:
    metadata:
      labels:
        app: importer
    spec:
      containers:
      - name: importer
        image: nginx
        volumeMounts:
          - mountPath: /ehb/media
            name: ehb-media
      volumes:
      - name: ehb-media
        persistentVolumeClaim:
          claimName: ehb-media-pvc
